Remove old unused stuff
Things that were here would've not worked (speaking from experience), so
remove it until I need to use the language again some day in the future.

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,11 @@
 \#*
 *~
 .session
-tramp
-bookmarks
-swank/*
-elpa/*
-eshell/*
+/elpa/*
 auto-save-list/*
-url/*
 ac-comphist.dat
 /abbrev_defs
-cedet-*/*
-jdee-*/*
 *.elc
 /transient
+/eln-cache
+/projectile-bookmarks.eld
